@@ -1,4 +1,5 @@
 Jul 05 2003  2.9.1  Added fatal condition if channel lists are empty
+                    Tweaked packet.h to like newer and older gccs again
 Jul 04 2003  2.9.1  Added caching of client IP data
 Jul 03 2003  2.9.1  Totally revamped mac-masking code and manufacturer
                      matching code.
